# babo_matching_engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  UPUTE_ZA_PRIJATELJA.txt  building_diary.md
bench/: CMakeLists.txt  babo_latency.cpp  babo_throughput.cpp  bench_common.h  bench_main.cpp  liquibook_latency.cpp  liquibook_throughput.cpp
benchmark/: CMakeLists.txt  LICENSE
benchmark/adapters/: CMakeLists.txt  babobook_adapter.cpp  liqui_book_type.h  liquibook_adapter.cpp  template_adapter.h.cpp
benchmark/api/: matching_engine_api.h
benchmark/reference/: correctness_hash.txt
benchmark/src/: audit.cpp  correctness.cpp  harness.cpp  harness.h  platform.cpp  platform.hpp  transport.cpp
benchmark/workload/: generator.cpp  scenarios.json  seeds.txt
cmake/: CompilerSettings.cmake
docs/: API_CONTRACT.md
examples/: basic_book.cpp
libs/babo_book/: CMakeLists.txt
libs/babo_book/include/babo/: order_book.hpp
libs/babo_book/include/book/: callback.h  comparable_price.h  depth.h  depth_constants.h  depth_level.h  depth_listener.h  depth_order_book.h  fastmap.h  logger.h  matching_book.h  multimap.h  order.hpp  order_book.h  order_listener.h  order_tracker.h  trade_listener.h  types.h
libs/babo_book/include/data_structures/: global_pin_chain.h  narb_tree.h  pin.h  pin_node.h  price_level_descriptor.h
libs/babo_book/include/memory/: memory_pool.h
libs/babo_book/include/simple/: simple_order.h  simple_order_book.h
libs/babo_book/src/: order_book.cpp  simple_order.cpp
libs/babobook/: CMakeLists.txt
libs/babobook/examples/: CMakeLists.txt  basic_book.cpp
libs/babobook/include/book/: bbo_listener.h  depth.h  depth_constants.h  depth_level.h  matching_book.h  order_book_listener.h  order_listener.h  simple_order.h  trade_listener.h  types.h
libs/babobook/include/data_structures/: narb_tree.h  pin_node.h  price_level_descriptor.h
libs/babobook/include/memory/: memory_pool.h
libs/babobook/include/simple/: simple_order.h
libs/babobook/src/: simple_order.cpp
libs/liquibook/: CMakeLists.txt
libs/liquibook/include/book/: bbo_listener.h  comparable_price.h  order_tracker.h
libs/liquibook_ref/include/book/: depth_listener.h
paper/: README.md  paper.tex
paper/data/: AGGREGATE.md  README.md  aggregate.py
paper/data/Darwin-Apple-M4-Pro/market_matrix/: MANIFEST.sha256  report.md  results.csv  results.json
paper/data/Darwin-Apple-M4-Pro/scaling/: MANIFEST.sha256  raw_babobook.txt  raw_liquibook.txt  report.md  results.csv  results.json
paper/data/Linux-AMD-Ryzen-9-5900HX/market_matrix/: MANIFEST.sha256  report.md  results.csv  results.json
paper/data/Linux-AMD-Ryzen-9-5900HX/scaling/: MANIFEST.sha256  raw_babobook.txt  raw_liquibook.txt  report.md  results.csv  results.json
paper/data/Windows-AMD-Ryzen-7-7730U/market_matrix/: MANIFEST.sha256  report.md  results.csv  results.json
paper/data/Windows-AMD-Ryzen-7-7730U/scaling/: MANIFEST.sha256  raw_babobook.txt  raw_liquibook.txt  report.md  results.csv  results.json
paper/data/Windows-AMD-Ryzen-Threadripper-PRO-3945WX-12-Cores/market_matrix/: MANIFEST.sha256  report.md  results.csv  results.json
paper/data/Windows-AMD-Ryzen-Threadripper-PRO-3945WX-12-Cores/scaling/: MANIFEST.sha256  raw_babobook.txt  raw_liquibook.txt  report.md  results.csv  results.json
paper/figures/: global-pin-architecture.tex  order-lifecycle.tex
perf/: CMakeLists.txt  README.md  babo_perf_order_book.cpp  babo_scaling.cpp  bench_log.h  bench_util.h  liqui_perf_order_book.cpp  liqui_scaling.cpp  scaling_common.h  workload.hpp
scripts/: README.md  _script_utils.py  compare_engines.ps1  compare_engines.sh  compare_payload_scaling.ps1  regen_references.ps1  regen_references.sh  run_market_matrix.ps1  run_market_matrix.py  run_market_matrix.sh  run_portable_perf.ps1  run_portable_perf.py  run_portable_perf.sh  run_scaling.ps1  run_scaling.py  run_scaling.sh
src/: CMakeLists.txt  babo_latency_order_book.cpp  babo_perf_order_book.cpp  liqui_latency_order_book.cpp  liqui_perf_order_book.cpp  main.cpp  pch.hpp
src/bench/: bench_util.h  engines.hpp  pin.hpp  workload.hpp  workload_reader.h  workload_stats.cpp
test/babo_test/: CMakeLists.txt  ut_all_or_none.cpp  ut_cancel_replace.cpp  ut_depth.cpp  ut_immediate_or_cancel.cpp  ut_market_price.cpp  ut_order_book.cpp  ut_stop_orders.cpp  ut_trade_ring.cpp
test/babo_test/unit/: babo_test_utils.h  changed_checker.h  depth_check.h
test/liqui_test/: CMakeLists.txt  ut_all_or_none.cpp  ut_bbo_order_book.cpp  ut_depth.cpp  ut_immediate_or_cancel.cpp  ut_listeners.cpp  ut_market_price.cpp  ut_order_book.cpp  ut_order_book_shared_ptr.cpp  ut_stop_orders.cpp
test/liqui_test/unit/: boost_shim.h
